--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3"
 services:
 
   ngf_server:
-    container_name: ngf-server
+    container_name: ${APP_NAME}
     build:
       context: .
       dockerfile: ./Dockerfile
-    image: ngf-server:1.0.2
+    image: ${APP_NAME}:${APP_VERSION}
